[package]
name = "rustic-yellow"
version = "0.1.0"
edition = "2021"
description = "A re-implementation of the classic GameBoy Color game Pokemon Yellow in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = "=2.0.6"
blip_buf = "0.1.4"
clap = { version = "4.3.11", features = ["derive"] }
cpal = "0.15.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
env_logger = "0.10.0"
glium = { version = "0.34.0", default-features = false, features = ["glutin"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
log = "0.4.17"
pokemon-sprite-compression = "0.1.2"
pokemon-synthesizer = "0.1.0"
rodio = { version = "0.17.1", default-features = false, features = ["flac"] }
terminal_size = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
futures = "0.3.28"
futures-timer = "3.0.3"
termwiz = "0.22.0"


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"

[package.metadata.bundle]
name = "Rustic Yellow"
identifier = "com.linusu.rustic-yellow"
icon = ["AppIcon.icns"]
resources = ["music"]
