[package]
name = "rustic-yellow"
version = "0.1.0"
edition = "2021"
description = "A re-implementation of the classic GameBoy Color game Pokemon Yellow in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artem = "^2.0.6"
termwiz = { version = "0.22.0", features = ["serde", "use_image", "use_serde"] }
blip_buf = "0.1.4"
clap = { version = "4.3.11", features = ["derive"] }
cpal = "0.15.2"
env_logger = "0.10.0"
glium = { version = "0.34.0", default-features = false, features = ["glutin"] }
image = { version = "0.24.6", default-features = false, features = ["png"] }
log = "0.4.17"
pokemon-sprite-compression = "0.1.2"
pokemon-synthesizer = "0.1.0"
rodio = { version = "0.17.1", default-features = false, features = ["flac"] }
terminal_size = "0.3.0"
tokio = { version = "1.36.0", features = [
  "rt-multi-thread",
  "net",
  "time",
  "process",
  "macros",
  "sync",
  "signal",
] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
futures = "0.3.28"
futures-timer = "3.0.3"
anyhow = "1.0.80"
better-panic = "0.3.0"
human-panic = "1.2.3"
icy_sixel = "0.1.2"

[features]
serve = []

[[bin]]
name = "rustic-serve"
path = "src/server_main.rs"
required-features = ["serve"]

[profile.serve]
default-run = "rustic-serve"
# inherits = "dev"
inherits = "release"
opt-level = 3
#lto = true


[target.'cfg(not(target_os = "windows"))'.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
ed25519-dalek = { version = "2.1.0", features = ["serde"] }
futures = "0.3.30"
image = "0.24.8"
imageproc = "0.23.0"
include_dir = "0.7.3"
log = "0.4.20"
once_cell = "1.19.0"
rand = "0.8.5"
ratatui = "0.26.0"
russh = { git = "https://github.com/warp-tech/russh" }
russh-keys = { git = "https://github.com/warp-tech/russh" }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = [
  "rt-multi-thread",
  "net",
  "time",
  "process",
  "macros",
  "sync",
  "signal",
] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
ratatui-image = "0.8.1"
async-once-cell = "0.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"

[package.metadata.bundle]
name = "Rustic Yellow"
identifier = "com.linusu.rustic-yellow"
icon = ["AppIcon.icns"]
resources = ["music"]
